--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <div class="row">
                                 <div class="col s12 l6">
                                     <!-- Brand or logo-->
-                                    <a href="#!" class="brand">Dreamland</a>
+                                    <a href="#!" class="brand">Zara Epi</a>
                                     <!-- Menu button visible on tablet and mobile--><span class="right show-on-medium-and-down hide-on-large-only"><a id="sidenav-toggle" href="#" data-activates="slide-out" class="sidenav-toggle">Menu</a></span></div>
                                 <div class="col s12 l6">
                                     <!-- Desktop menu version-->
@@ -110,9 +110,9 @@
                         <!-- zara add this -->
                      <div class="container">
                 <div class="row">
-                    <div class="col s12 l6 offset-l6 flow-text intro">We create
+                    <div class="col s12 l6 offset-l6 flow-text intro">I create
                         <a href="#work">digital solutions</a>&nbsp;that work brilliantly, deliver fantastic user experience and look lovely too.
-                        <a href="#contact">Talk to us</a>&nbsp;about solving your online challenges.</div>
+                        <a href="#contact">Talk to me</a>&nbsp;about solving your online challenges.</div>
                 </div>
             </div>
             <!--  -->
@@ -120,7 +120,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col s12">  
-                            <h2>Our expertise</h2>
+                            <h2>My expertise</h2>
                         </div>
                     </div>
                     <div class="service-items">
@@ -134,11 +134,11 @@
                             <div class="col s12 l6 margin-on-medium-and-down">
                                 <i class="icon-basic-target"></i><span class="flow-text">Web Development</span></div>
                             <div class="col s12 l6">
-                                <i class="icon-ecommerce-graph-increase"></i><span class="flow-text">UI/UX Design</span></div>
+                                <i class="icon-basic-heart"></i><span class="flow-text">UI/UX Design</span></div>
                         </div>
                         <div class="row">
                             <div class="col s12 l6 margin-on-medium-and-down">
-                                <i class="icon-basic-battery-charge"></i><span class="flow-text">Web Design</span></div>
+                                <i class="icon-basic-target"></i><span class="flow-text">User Research</span></div>
                             <div class="col s12 l6">
                                 <i class="icon-basic-heart"></i><span class="flow-text">A lot of passion</span></div>
                         </div>
@@ -436,7 +436,7 @@
                 </div>
             </section>
             <!-- Prices-->
-            <div id="prices" class="container scrollspy">
+           <!--  <div id="prices" class="container scrollspy">
 
                 <section class="prices">
                     <div class="row">
@@ -542,9 +542,9 @@
                         </div>
                     </div>
                 </section>
-            </div>
+            </div> -->
             <!-- About-->
-            <div id="about" class="container about scrollspy">
+            <!-- <div id="about" class="container about scrollspy">
 
                 <section class="team">
                     <div class="row">
@@ -660,10 +660,10 @@
                         </div>
                     </div>
                 </section>
-            </div>
+            </div> -->
             <!-- Journal-->
 
-            <section id="journal" class="journal scrollspy">
+           <!--  <section id="journal" class="journal scrollspy">
                 <div class="container">
                     <div class="row">
                         <div class="col s12">
@@ -918,7 +918,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- Contact-->
             <div id="contact" class="container scrollspy">
 
@@ -953,7 +953,7 @@
                         </div>
                         <div class="row">
                             <div class="col s12">
-                                <button id="send-message" type="submit" class="btn btn-large btn-flat waves-effect waves-dark white black-text">Send</button>
+                                <button id="send-message" type="submit" class="btn btn-large btn-flat waves-effect waves-dark white black-text">Send</button>  
                             </div>
                         </div>
                     </form>
